add swagger for article api
