# blog-service/internal/routers/api/v1/tag.go
@@ -8,7 +8,6 @@ func NewTag() Tag {
 	return Tag{}
 }
 
-func (t Tag) Get(c *gin.Context)    {}
 //@Summary get a list of tags
 //@Produce json
 //@Param name query string false "tagName" maxlength(100)
@@ -25,7 +24,7 @@ func (t Tag) List(c *gin.Context)   {}
 //@Param name query string false "tagName" maxlength(100)
 //@Param name query int false "status" Enums(0, 1) default(1)
 //@Param created_by body string false "creator" minlength(3) maxlength(100)
-//@Success 200 {object} model.TagSwapper "Success"
+//@Success 200 {object} model.Tag "Success"
 //@Failure 400 {object} errcode.Error "Failure"
 //@Failure 500 {object} errcode.Error "Internal Server Error"
 //@Router /api/v1/tags [post]
@@ -36,7 +35,7 @@ func (t Tag) Create(c *gin.Context) {}
 //@Param name body string false "tag name" minlength(3) maxlength(100)
 //@Param state body int false "state" Enums(0, 1) default(1)
 //@Param modified_by body string true "modifier" minlength(3) maxlength(100)
-//@Success 200 {object} model.TagSwapper "Success"
+//@Success 200 {object} model.Tag "Success"
 //@Failure 400 {object} errcode.Error "Failure"
 //@Failure 500 {object} errcode.Error "Internal Server Error"
 //@Router /api/v1/tags/{id} [put]
@@ -44,7 +43,7 @@ func (t Tag) Update(c *gin.Context) {}
 //@Summary delete a tag
 //@Produce json
 //@Param id path int true "id for tag"
-//@Success 200 {object} model.TagSwapper "Success"
+//@Success 200 {object} string "Success"
 //@Failure 400 {object} errcode.Error "Failure"
 //@Failure 500 {object} errcode.Error "Internal Server Error"
 //@Router /api/v1/tags/{id} [delete]
